syntax = "proto3";

package product;

option go_package = "./product;product_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "trans.proto";
import "_category_preview.proto";
import "common.proto";
import "property_group.proto";

service ProductService {
    rpc getProductListByParamsPrivate(ProductQueryParams) returns (ProductListPrivate);
    rpc getProductListByParamsPublic(ProductQueryParams) returns (ProductListPublic);
    rpc getProductListByIdsPublic(ProductListByIdsParamsPublic) returns (ProductListPreviewPublic);
    rpc getProductPrivate(ProductPrivateSearchParams) returns (Product);
    rpc getProductListByCategory(ProductListByCategoryParams) returns (ProductListByCategory); // TODO rebuild
    rpc createProduct(ProductCU) returns (ProductPreview);
    rpc updateProduct(ProductUpdateParams) returns (google.protobuf.Empty);
    rpc deleteProduct(ProductPrivateSearchParams) returns (google.protobuf.Empty);
}

// entities

enum ProductStatus {
    AVAILABLE_STATUS = 0;
    OUT_OF_STOCK_STATUS = 1;
}

enum ProductLabelType {
    DISCOUNT_LABEL = 0;
    NEW_LABEL = 1;
    POPULAR_LABEL = 2;
}

enum ProductSort {
    POPULAR_SORT = 0;
    PRICE_UP_SORT = 1;
    PRICE_DOWN_SORT =2;
    NEW_SORT = 3;
}

message ProductLabel {
    ProductLabelType type = 1;
    optional string value = 2;
}

message ProductPrice {
    int32 current = 1;
    optional int32 old = 2;
}

message ProductImage {
    string id = 1;
    string src = 2;
    string srcId = 3;
    string product = 4;
    bool isMain = 5;
}

message ProductPreview {
    string id = 1;
    trans.TransData title = 2;
    ProductStatus status = 3;
    ProductPrice price = 4;
    int32 rating = 6;
    google.protobuf.Timestamp createdAt = 7;
    bool isPublic = 8;
    bool isNew = 9;
    string comment = 10;
    optional common.Image image = 11;
}

message ProductPreviewPublic {
    string id = 1;
    string title = 2;
    ProductStatus status = 3;
    ProductPrice price = 4;
    optional common.Image image = 6;
    repeated ProductLabel labels = 7;
}

message ProductCardPublic {
    string id = 1;
    string title = 2;
    ProductStatus status = 3;
    ProductPrice price = 4;
    repeated ProductLabel labels = 5;
    string description = 12;
    repeated common.Image images = 11;
    repeated property_group.PropertyGroupPreviewPublic options = 14;
}

message Product {
    string id = 1;
    trans.TransData title = 2;
    ProductStatus status = 3;
    ProductPrice price = 4;
    int32 rating = 6;
    google.protobuf.Timestamp createdAt = 7;
    bool isPublic = 8;
    bool isNew = 9;
    string comment = 10;
    trans.TransData description = 12;
    category_preview.CategoryPreview category = 5;
    repeated common.Image images = 11;
    repeated property_group.PropertyGroupPreview options = 14;
}

message ProductPublic {
    string id = 1;
    string title = 2;
    ProductStatus status = 3;
    ProductPrice price = 4;
    string description = 5;
    repeated ProductLabel labels = 6;
    category_preview.CategoryPreviewPublic category = 7;
    repeated common.Image images = 8;
    repeated property_group.PropertyGroupPreviewPublic options = 9;
}

// requests

message ProductCU {
    trans.TransData title = 1;
    trans.TransData description = 2;
    int32 priceCurrent = 3;
    optional int32 priceOld = 4;
    bool isPublic = 5;
    ProductStatus status = 6;
    int32 rating = 7;
    bool isNew = 11;
    string comment = 12;
    int32 category = 8;
    repeated common.File images = 9;
    repeated int32 properties = 10;
}

message ProductQueryParams {
    common.QueryCommonParams common = 1;
    common.QueryPriceParams price = 2;
    common.QueryPaginationParams pagination = 3;
    ProductSort sort = 4;
    ProductStatus status = 5;
    string category = 6;
}

message ProductPrivateSearchParams {
    string id = 1;
}

message ProductListByCategoryParams {
    int32 category = 1;
}

message ProductListByIdsParamsPublic {
    repeated string ids = 1;
    common.QueryCommonParams queries = 2;
}

message ProductUpdateParams {
    string id = 1;
    ProductCU data = 2;
}

// responces

message ProductListPrivate {
    repeated ProductPreview data = 1;
    common.Pagination pagination = 2;
}

message ProductListPublic {
    repeated ProductCardPublic data = 1;
    common.Pagination pagination = 2;
}

message ProductListByCategory {
    repeated ProductPreview items = 1;
}

message ProductListPreviewPublic {
    repeated ProductPreviewPublic items = 1;
}
